# codexdcp

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  opencode.example.json
.github/workflows/: ci.yml  release.yml
browser_extension/: background.js  content.js  manifest.json  selectors.json
src/: bash_ops.rs  bridge.rs  cdp.rs  config.rs  error.rs  fs_ops.rs  git_ops.rs  handoff.rs  http_server.rs  js.rs  lib.rs  main.rs  mcp_server.rs  prompt.rs  skill.rs  workspace.rs
